tests/errors/type_check/operand_typing/unit_type_mismatch.sim

        fn f() {
            n: i64;
            entry:
            n = unit;
            return
        }
        